update welcome page

--- a/Content/Welcome.htm
+++ b/Content/Welcome.htm
@@ -6,16 +6,28 @@
     <body>
         <h1>Welcome to the Online Help for PhotoWizard</h1>
         <MadCap:searchBarProxy data-mc-skin="/Project/Skins/SearchBar.flskn" />
-        <p>.</p>
+        <p>&#160;</p>
         <div class="NewRowClass1">
             <div>
-                <p>Cell 1</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImages8.jpeg" class="welcome" />
+                </p>
+                <p><a href="BlendingTwoImages.htm">Blending Two Images</a>
+                </p>
             </div>
             <div>
-                <p>Cell 2</p>
+                <p>
+                    <img src="Resources/Images/PhotoWizardCaps - 4.jpeg" class="welcome" />
+                </p>
+                <p><a href="WhatAreEffects.htm">Image Effects</a>
+                </p>
             </div>
             <div>
-                <p>Cell 3</p>
+                <p>
+                    <img src="Resources/Images/SampleImagePW - 1.jpeg" class="welcome" />
+                </p>
+                <p><a href="CreatingAnImageMask.htm">Creating an Image Mask</a>
+                </p>
             </div>
         </div>
     </body>
