updated logo with PhotoWizard text

--- a/Content/Welcome.htm
+++ b/Content/Welcome.htm
@@ -7,6 +7,8 @@
         <h1>Welcome to the Online Help for PhotoWizard</h1>
         <MadCap:searchBarProxy data-mc-skin="/Project/Skins/SearchBar.flskn" />
         <p>&#160;</p>
+        <p>PhotoWizard is a powerful photo editor for the iPhone and iPod. Key features include image masking, over 100 filters and effects, and many different photo adjustments. UI offers unlimited undo/redo, auto-save sessions, intuitive UI, and high-resolution export.</p>
+        <p>&#160;</p>
         <div class="NewRowClass1">
             <div>
                 <p>
