updated welcome message

--- a/Content/Welcome.htm
+++ b/Content/Welcome.htm
@@ -4,10 +4,10 @@
         <link href="Resources/Stylesheets/WelcomeTopic.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Welcome to the Online Help for PhotoWizard</h1>
+        <h1>Welcome to PhotoWizard Help</h1>
         <MadCap:searchBarProxy data-mc-skin="/Project/Skins/SearchBar.flskn" />
         <p>&#160;</p>
-        <p>PhotoWizard is a powerful photo editor for the iPhone and iPod. Key features include image masking, over 100 filters and effects, and many different photo adjustments. UI offers unlimited undo/redo, auto-save sessions, intuitive UI, and high-resolution export.</p>
+        <p>PhotoWizard is a powerful photo editor for the iPhone and iPod. Edit full images or specific portions using masking, apply over 100 filters and effects, and make numerous photo adjustments. Enjoy an intuitive touch UI with unlimited undo/redo, auto-save sessions, and high-resolution exports.</p>
         <p>&#160;</p>
         <div class="NewRowClass1">
             <div>
