What Is Masking topic creation

--- a/Content/WhatIsMasking.htm
+++ b/Content/WhatIsMasking.htm
@@ -4,7 +4,82 @@
     </head>
     <body>
         <h1>What is Masking?</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Image masking lets you selectively edit parts of your photos to enhance details or isolate subjects. Use PhotoWizard masking tools such as the Magic Wand for colour-based selection and the Brush for manual adjustments. Masking provides precise control over which parts of your image are edited.</p>
+        <p>
+            <img src="Resources/Images/PW_RoseMask2.jpeg" class="welcome" />
+            <img src="Resources/Images/PW_RoseMask3.jpeg" class="welcome" />
+        </p>
+        <h2>Core Masking Applications</h2>
+        <ul>
+            <li>
+                <p><b>Selective Application of PhotoWizard Filters or Effects:</b>
+                </p>
+                <ul>
+                    <li>
+                        <p>Use masks to apply PhotoWizard effects or filters to specific parts of your image. For example, you can preserve the colour of a rose while converting the background to black and white.</p>
+                        <p>
+                            <img src="Resources/Images/PW_RoseMask7.jpeg" class="welcome" />
+                        </p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p><b>Creating Photos with Transparency:</b>
+                </p>
+                <ul>
+                    <li>
+                        <p>Use masks to create images with transparent areas, which is beneficial for web design, graphic design, and video production.</p>
+                        <p>
+                            <img src="Resources/Images/PW_RoseMask9.png" class="welcome" />
+                        </p>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <h2>PhotoWizard Masking Tools and functions</h2>
+        <ul>
+            <li>
+                <p><b>Eraser</b>: Removes unwanted mask areas.</p>
+            </li>
+            <li>
+                <p><b>Magic Wand</b>: Masks all similarly coloured pixels connected at the touch point.</p>
+            </li>
+            <li>
+                <p><b>Colour Range</b>: Masks all similarly coloured pixels across the image.</p>
+            </li>
+            <li>
+                <p><b>Brush</b>: Allows for manual mask drawing with a brush tool.</p>
+            </li>
+            <li>
+                <p><b>Lasso</b>: Enables precise area selection with a lasso tool.</p>
+            </li>
+        </ul>
+        <h2>Geometric and Gradient Masks</h2>
+        <ul>
+            <li>
+                <p><b>Rectangle and Ellipse</b>: Draw masks using geometric shapes.</p>
+            </li>
+            <li>
+                <p><b>Linear, Bi-linear, and Radial Gradients</b>: Create gradient masks.</p>
+            </li>
+        </ul>
+        <h2>Additional Masking Controls</h2>
+        <ul>
+            <li>
+                <p><b>Invert Mask</b>: Toggle masking between inside and outside a selected area.</p>
+            </li>
+            <li>
+                <p><b>Clear Mask</b>: Remove all masks from the image.</p>
+            </li>
+            <li>
+                <p><b>Blur Mask</b>: Soften mask edges for a smoother appearance.</p>
+            </li>
+            <li>
+                <p><b>Undo and Redo</b>: Correct mistakes or revert changes in masking.</p>
+            </li>
+        </ul>
+        <p>&#160;</p>
+        <h3>Related Topics</h3>
         <p>
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending? </MadCap:xref>
         </p>
