updated text formating

--- a/Content/WhatIsMasking.htm
+++ b/Content/WhatIsMasking.htm
@@ -4,7 +4,9 @@
     </head>
     <body>
         <h1>What is Masking?</h1>
-        <p>Image masking lets you selectively edit parts of your photos to enhance details or isolate subjects. Use PhotoWizard masking tools such as the Magic Wand for colour-based selection and the Brush for manual adjustments. Masking provides precise control over which parts of your image are edited.</p>
+        <p>Image masking lets you selectively edit parts of your photos to enhance details or isolate subjects. </p>
+        <p>Use PhotoWizard masking tools such as the Magic Wand for colour-based selection and the Brush for manual adjustments.</p>
+        <p> Masking provides precise control over which parts of your image are edited.</p>
         <p>
             <img src="Resources/Images/PW_RoseMask2.jpeg" class="welcome" />
             <img src="Resources/Images/PW_RoseMask3.jpeg" class="welcome" />
@@ -16,7 +18,8 @@
                 </p>
                 <ul>
                     <li>
-                        <p>Use masks to apply PhotoWizard effects or filters to specific parts of your image. For example, you can preserve the colour of a rose while converting the background to black and white.</p>
+                        <p>Use masks to apply PhotoWizard effects or filters to specific parts of your image. </p>
+                        <p>For example, you can preserve the colour of a rose while converting the background to black and white.</p>
                         <p>
                             <img src="Resources/Images/PW_RoseMask7.jpeg" class="welcome" />
                         </p>
