add text to image task start

--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -1,9 +1,98 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Adding Text to Images</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <ol>
+            <li>
+                <p>Start with one image loaded into PhotoWizard.</p>
+            </li>
+        </ol>
+        <h2>Load Second Image</h2>
+        <p>&#160;</p>
+        <ol MadCap:continue="true">
+            <li>
+                <p>First select Tools. <img src="Resources/Images/PW_AddText1.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>Then select Add Text.</p>
+            </li>
+            <li>
+                <p>Your image is now displayed with text inside of box with manipulation handles. <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>Touch-drag the handles to re-size, rotate the text. <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" /></p>
+            </li>
+        </ol>
+        <p>&#160;</p>
+        <h2>Adjust Image Settings</h2>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
+            </li>
+        </ol>
+        <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
+            <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
+            <col class="TableStyle-PWTableStyle-Column-Column1" />
+            <thead>
+                <tr class="TableStyle-PWTableStyle-Head-Header1">
+                    <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Blend Options</th>
+                    <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Discard all changes to the foreground image.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Scale the foreground image to fit the background image.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body1">
+                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Swap the foreground and background images.</td>
+                </tr>
+                <tr class="TableStyle-PWTableStyle-Body-Body2">
+                    <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
+                    <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Lock the aspect ratio of the foreground image.</td>
+                </tr>
+            </tbody>
+        </table>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Use these blending options to control the behaviour of the foreground image or swap it with the background image.</p>
+            </li>
+        </ol>
+        <p>&#160;</p>
+        <h2>Chose Blending Mode and Opacity</h2>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue. <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>Experiment with various blending modes and opacity.</p>
+            </li>
+            <li>
+                <p>When you are happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
+            </li>
+        </ol>
+        <p>&#160;</p>
+        <h4>NOTES:</h4>
+        <div class="note">You have creative control over which parts of your images are combined by masking your background image. </div>
+        <p>&#160;</p>
+        <div class="note">You have an unlimited undo action so feel free to explore different combinations</div>
+        <h3>&#160;</h3>
+        <h3>Related Topics</h3>
+        <p>
+            <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
+        </p>
+        <p><a href="BlendingModeList.htm">Blending Mode List </a>
+        </p>
+        <p>
+            <MadCap:xref href="CreatingAnImageMask.htm">Creating an Image Mask</MadCap:xref>
+        </p>
     </body>
 </html>
