updates to add text task

--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -7,11 +7,9 @@
         <h1>Adding Text to Images</h1>
         <ol>
             <li>
-                <p>Start with one image loaded into PhotoWizard.</p>
+                <p>Start with an image loaded into PhotoWizard.</p>
             </li>
         </ol>
-        <h2>Load Second Image</h2>
-        <p>&#160;</p>
         <ol MadCap:continue="true">
             <li>
                 <p>First select Tools. <img src="Resources/Images/PW_AddText1.png" class="thumbnail" /></p>
@@ -20,10 +18,14 @@
                 <p>Then select Add Text.</p>
             </li>
             <li>
-                <p>Your image is now displayed with text inside of box with manipulation handles. <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
+                <p>Your image is now displayed with default text inside of a box with manipulation handles. <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
             </li>
             <li>
-                <p>Touch-drag the handles to re-size, rotate the text. <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" /></p>
+                <p>Touch-drag the box handles to re-size and rotate the text. Two-finger drag inside the box to reposition the text. <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" /></p>
+            </li>
+            <li>
+                <p>Select 'T' in the top menu bar or double tap text in box to open text edit window. <img src="Resources/Images/PW_AddText6.png" class="thumbnail" /></p>
+                <p>Update your text. Choose left, centre, or right alignment. Select the check mark to keep your changes or the 'x' to discard.</p>
             </li>
         </ol>
         <p>&#160;</p>
