updates to add text task

--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
-        <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Adding Text to Images</h1>
@@ -12,63 +11,73 @@
         </ol>
         <ol MadCap:continue="true">
             <li>
-                <p>First select Tools. <img src="Resources/Images/PW_AddText1.png" class="thumbnail" /></p>
+                <p>First select Tools. </p>
             </li>
             <li>
                 <p>Then select Add Text.</p>
+                <p>
+                    <img src="Resources/Images/PW_AddText1.png" class="thumbnail" />
+                </p>
             </li>
             <li>
-                <p>Your image is now displayed with default text inside of a box with manipulation handles. <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
-            </li>
-            <li>
-                <p>Touch-drag the box handles to re-size and rotate the text. Two-finger drag inside the box to reposition the text. <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" /></p>
-            </li>
-            <li>
-                <p>Select 'T' in the top menu bar or double tap text in box to open text edit window. <img src="Resources/Images/PW_AddText6.png" class="thumbnail" /></p>
-                <p>Update your text. Choose left, centre, or right alignment. Select the check mark to keep your changes or the 'x' to discard.</p>
+                <p>Your image is now displayed with default text inside of a box with manipulation handles.</p>
+                <p> <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
             </li>
         </ol>
-        <p>&#160;</p>
-        <h2>Adjust Image Settings</h2>
+        <h2>Resize Reposition Text</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
+                <p>Touch-drag the box handles to re-size and rotate the text. </p>
+                <p>Two-finger drag inside the box to reposition the text.</p>
+                <p>
+                    <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
-        <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
-            <col class="TableStyle-PWTableStyle-Column-Column1" style="width: 143px;" />
-            <col class="TableStyle-PWTableStyle-Column-Column1" />
-            <thead>
-                <tr class="TableStyle-PWTableStyle-Head-Header1">
-                    <th class="TableStyle-PWTableStyle-HeadE-Column1-Header1">Blend Options</th>
-                    <th class="TableStyle-PWTableStyle-HeadD-Column1-Header1">Description</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="TableStyle-PWTableStyle-Body-Body1">
-                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Reset</td>
-                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Discard all changes to the foreground image.</td>
-                </tr>
-                <tr class="TableStyle-PWTableStyle-Body-Body2">
-                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2">Scale Fit</td>
-                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Scale the foreground image to fit the background image.</td>
-                </tr>
-                <tr class="TableStyle-PWTableStyle-Body-Body1">
-                    <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1">Swap</td>
-                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Swap the foreground and background images.</td>
-                </tr>
-                <tr class="TableStyle-PWTableStyle-Body-Body2">
-                    <td class="TableStyle-PWTableStyle-BodyB-Column1-Body2">Aspect Lock</td>
-                    <td class="TableStyle-PWTableStyle-BodyA-Column1-Body2">Lock the aspect ratio of the foreground image.</td>
-                </tr>
-            </tbody>
-        </table>
+        <h2>Edit Text</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Use these blending options to control the behaviour of the foreground image or swap it with the background image.</p>
+                <p>Select 'T' in the top menu bar or double tap text in box to open the text edit window. </p>
+                <p>Update your text. </p>
+                <p>Choose left, centre, or right alignment. </p>
+                <p>Select check mark to keep changes or 'x' to discard.</p>
+                <p>
+                    <img src="Resources/Images/PW_AddText6.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
-        <p>&#160;</p>
+        <h2>Edit Text Properties</h2>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Select Gear Icon in top menu to open text edit properties window.</p>
+                <p>You can change the following:</p>
+                <ul>
+                    <li>
+                        <p><b>Text Colour</b>
+                        </p>
+                    </li>
+                    <li>
+                        <p><b>Text Font</b>
+                        </p>
+                    </li>
+                    <li>
+                        <p><b>Shadow</b>
+                        </p>
+                    </li>
+                    <li>
+                        <p><b>Opacity</b>
+                        </p>
+                    </li>
+                </ul>
+                <p>
+                    <img src="Resources/Images/PW_AddText13a.png" class="thumbnail" />
+                </p>
+                <p>Select the Text Font to bring up a font selection window.</p>
+                <p>
+                    <img src="Resources/Images/PW_AddText4.png" class="thumbnail" />
+                </p>
+            </li>
+        </ol>
         <h2>Chose Blending Mode and Opacity</h2>
         <ol MadCap:continue="true">
             <li>
