add text topic completed

--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -49,7 +49,7 @@
         <h2>Edit Text Properties</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Select Gear Icon in top menu to open text edit properties window.</p>
+                <p>Select Gear Icon in top menu to open the text properties window.</p>
                 <p>You can change the following:</p>
                 <ul>
                     <li>
@@ -72,29 +72,26 @@
                 <p>
                     <img src="Resources/Images/PW_AddText13a.png" class="thumbnail" />
                 </p>
-                <p>Select the Text Font to bring up a font selection window.</p>
+                <p>Select <b>Text Font</b> to bring up a font selection window.</p>
                 <p>
                     <img src="Resources/Images/PW_AddText4.png" class="thumbnail" />
                 </p>
             </li>
         </ol>
-        <h2>Chose Blending Mode and Opacity</h2>
+        <h2>Save Your Edits</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue. <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" /></p>
-            </li>
-            <li>
-                <p>Experiment with various blending modes and opacity.</p>
-            </li>
-            <li>
-                <p>When you are happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
+                <p>When you're happy with your text edits touch the check mark in the top menu to keep your results.</p>
+                <p>
+                    <img src="Resources/Images/PW_AddText7.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
+        <p>Congratulations! You have successfully added text to your photo!</p>
         <p>&#160;</p>
         <h4>NOTES:</h4>
-        <div class="note">You have creative control over which parts of your images are combined by masking your background image. </div>
         <p>&#160;</p>
-        <div class="note">You have an unlimited undo action so feel free to explore different combinations</div>
+        <div class="note">You have unlimited undo actions so experiment with different text options.</div>
         <h3>&#160;</h3>
         <h3>Related Topics</h3>
         <p>
