--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -11,7 +11,7 @@
         </ol>
         <ol MadCap:continue="true">
             <li>
-                <p>First select Tools. </p>
+                <p>First, select Tools. </p>
             </li>
             <li>
                 <p>Then select Add Text.</p>
@@ -20,14 +20,14 @@
                 </p>
             </li>
             <li>
-                <p>Your image is now displayed with default text inside of a box with manipulation handles.</p>
+                <p>Your image is now displayed with default text inside a box with manipulation handles.</p>
                 <p> <img src="Resources/Images/PW_AddText2.png" class="thumbnail" /></p>
             </li>
         </ol>
-        <h2>Resize Reposition Text</h2>
+        <h2>Resize and Reposition Text</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Touch-drag the box handles to re-size and rotate the text. </p>
+                <p>Touch-drag the box handles to resize and rotate the text. </p>
                 <p>Two-finger drag inside the box to reposition the text.</p>
                 <p>
                     <img src="Resources/Images/PW_AddText5a.png" class="thumbnail" />
@@ -37,7 +37,7 @@
         <h2>Edit Text</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Select 'T' in the top menu bar or double tap text in box to open the text edit window. </p>
+                <p>Select 'T' in the top menu bar or double-tap the text box to open the text edit window. </p>
                 <p>Update your text. </p>
                 <p>Choose left, centre, or right alignment. </p>
                 <p>Select check mark to keep changes or 'x' to discard.</p>
@@ -49,7 +49,7 @@
         <h2>Edit Text Properties</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Select Gear Icon in top menu to open the text properties window.</p>
+                <p>Select the gear icon in the top menu to open the text properties window.</p>
                 <p>You can change the following:</p>
                 <ul>
                     <li>
@@ -81,7 +81,7 @@
         <h2>Save Your Edits</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>When you're happy with your text edits touch the check mark in the top menu to keep your results.</p>
+                <p>When you're happy with your text edits, touch the check mark in the top menu to keep your results.</p>
                 <p>
                     <img src="Resources/Images/PW_AddText7.png" class="thumbnail" />
                 </p>
@@ -91,7 +91,7 @@
         <p>&#160;</p>
         <h4>NOTES:</h4>
         <p>&#160;</p>
-        <div class="note">You have unlimited undo actions so experiment with different text options.</div>
+        <div class="note">You have unlimited undo actions, so experiment with different text options.</div>
         <h3>&#160;</h3>
         <h3>Related Topics</h3>
         <p>
