--- a/Content/BlendingModeList.htm
+++ b/Content/BlendingModeList.htm
@@ -75,12 +75,12 @@
                 <tr class="TableStyle-PWTableStyle-Body-Body1">
                     <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Difference</b>
                     </td>
-                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Subtracts the top layer from the bottom layer or vice versa, to get the absolute difference.</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body1">Subtracts the top layer from the bottom layer, or vice versa, to get the absolute difference.</td>
                 </tr>
                 <tr class="TableStyle-PWTableStyle-Body-Body2">
                     <td class="TableStyle-PWTableStyle-BodyE-Column1-Body2"><b>Exclusion</b>
                     </td>
-                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Simlar to Difference but with lower contrast.</td>
+                    <td class="TableStyle-PWTableStyle-BodyD-Column1-Body2">Similar to Difference but with lower contrast.</td>
                 </tr>
                 <tr class="TableStyle-PWTableStyle-Body-Body1">
                     <td class="TableStyle-PWTableStyle-BodyE-Column1-Body1"><b>Saturation</b>
