--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -11,27 +11,37 @@
                 <p>Start with one image loaded into PhotoWizard.</p>
             </li>
         </ol>
-        <h2>Load Second Image</h2>
-        <p>&#160;</p>
+        <h2>Load the Second Image</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>First select Tools <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" /></p>
+                <p>First, select Tools. </p>
             </li>
             <li>
-                <p>Then select Blend Images</p>
+                <p>Then select Blend Images.</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" />
+                </p>
             </li>
             <li>
-                <p>Then from Blend Image toolbar select the second image. <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" /></p>
+                <p>Then, from the Blend Image toolbar, select the second image.</p>
+                <p>
+                    <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" />
+                </p>
             </li>
             <li>
-                <p>You now have two images to work with. Use touch gestures to re-size, rotate, and reposition the foreground image using the image handles <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" /></p>
+                <p>You now have two images to work with. Use touch gestures to resize, rotate, and reposition the foreground image using the image handles. </p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
-        <p>&#160;</p>
         <h2>Adjust Image Settings</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.<img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" /></p>
+                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
         <table style="mc-table-style: url('Resources/TableStyles/PWTableStyle.css');width: 66%;" class="TableStyle-PWTableStyle" cellspacing="0">
@@ -67,25 +77,27 @@
                 <p>Use these blending options to control the behaviour of the foreground image or swap it with the background image.</p>
             </li>
         </ol>
-        <p>&#160;</p>
-        <h2>Chose Blending Mode and Opacity</h2>
+        <h2>Choose Blending Mode and Opacity</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue. <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" /></p>
+                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue.</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" />
+                </p>
             </li>
             <li>
-                <p>Experiment with various blending modes and opacity.</p>
+                <p>Experiment with various blending modes and opacities.</p>
             </li>
             <li>
-                <p>When you are happy with your blended image touch the check mark in the top menu bar to keep your results.</p>
+                <p>When you are happy with your blended image, touch the check mark in the top menu bar to keep your changes.</p>
             </li>
         </ol>
         <p>&#160;</p>
         <h4>NOTES:</h4>
         <div class="note">You have creative control over which parts of your images are combined by masking your background image. </div>
         <p>&#160;</p>
-        <div class="note">You have an unlimited undo action so feel free to explore different combinations</div>
-        <h3>&#160;</h3>
+        <div class="note">You have unlimited undo action, so  explore different combinations.</div>
+        <p>&#160;</p>
         <h3>Related Topics</h3>
         <p>
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending?</MadCap:xref>
