--- a/Content/ImageMaskPrecisionEditing.htm
+++ b/Content/ImageMaskPrecisionEditing.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Using Image Mask for Precision Editing</h1>
+        <h1>Using Image Masks for Precision Editing</h1>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
