--- a/Content/WhatIsImageBlending.htm
+++ b/Content/WhatIsImageBlending.htm
@@ -46,7 +46,7 @@
                 <p><b>Superimpose Images:</b> Use masks to superimpose part of an image on top of another.
 </p>
                 <p>&#160;</p>
-                <p>By utilizing these features, you can create a seamless integration of multiple images into a single composition
+                <p>By utilizing these features, you can create a seamless integration of multiple images into a single composition.
 </p>
             </li>
         </ul>
