--- a/Content/WhatIsMasking.htm
+++ b/Content/WhatIsMasking.htm
@@ -39,13 +39,13 @@
                 </ul>
             </li>
         </ul>
-        <h2>PhotoWizard Masking Tools and functions</h2>
+        <h2>PhotoWizard Masking Tools and Functions</h2>
         <ul>
             <li>
                 <p><b>Eraser</b>: Removes unwanted mask areas.</p>
             </li>
             <li>
-                <p><b>Magic Wand</b>: Masks all similarly coloured pixels connected at the touch point.</p>
+                <p><b>Magic Wand</b>: Masks all the similarly coloured pixels connected at the touch point.</p>
             </li>
             <li>
                 <p><b>Colour Range</b>: Masks all similarly coloured pixels across the image.</p>
@@ -87,7 +87,7 @@
             <MadCap:xref href="WhatIsImageBlending.htm">What is Image Blending? </MadCap:xref>
         </p>
         <p>
-            <MadCap:xref href="ImageMaskPrecisionEditing.htm">Using Image Mask for Precision Editing</MadCap:xref>
+            <MadCap:xref href="ImageMaskPrecisionEditing.htm">Using Image Masks for Precision Editing</MadCap:xref>
         </p>
     </body>
 </html>
