add SEO MetaData Topic Description

--- a/Content/AddingTextToImages.htm
+++ b/Content/AddingTextToImages.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <meta name="description" content="Insert, overlay, or add text to your photos and pictures. Select tools, adjust text settings and attributes, and edit properties like font typeface, colour, tint, shadow, backdrop, and opacity. Enhance your images by resizing, scaling, repositioning, shifting, and applying effects to text, supported by unlimited undo actions." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>Adding Text to Images</h1>
