updated SEO meta descriptions

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -2,7 +2,7 @@
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <meta name="description" content="Combine or blend two images using modes, masking and opacity." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
+        <meta name="description" content="Combine, merge, or blend images and photos. Adjust the position, size, scale, and rotation of the foreground image with touch gestures. Use blending options like Reset, Scale Fit, Swap, and Aspect Lock, and adjust opacity to achieve the desired visual effects. Use the following blending modes, Normal, Multiply, Screen, Overlay, Darken, Lighten, Dodge, Burn, Soft Light, Hard Light, Difference, Exclusion, Saturation, Hue, Colour, Luminosity, Darken, and Lighten for unlimited effects" MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>Blending Two Images</h1>
