--- a/Content/WhatIsMasking.htm
+++ b/Content/WhatIsMasking.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <meta name="description" content="Use image masking to selectively edit parts of photos, highlighting details or focusing on specific subjects. Employ tools like the Magic Wand for colour-based selection and the Brush for manual adjustments. Masking allows precise application of effects and filters and the creation of transparent areas for design purposes. Key tools include the Eraser, Colour Range, and Lasso, with options like Invert, Clear, and Blur masks to enhance editing precision. Other tools are geometric and gradient masks, such as Linear, Bi-linear, Radial, Rectangle, and Ellipse shapes." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>What is Masking?</h1>
