replaced Delete this text with Lorum Ipsum Delor...

--- a/Content/EditingAnImageWithFilters.htm
+++ b/Content/EditingAnImageWithFilters.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Editing an Image With Filters</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.</p>
         <p>&#160;</p>
         <p>
             <img src="Resources/Images/PhotoWizardCaps - 4.jpeg" class="thumbnail" />
