--- a/Content/WhatAreEffects.htm
+++ b/Content/WhatAreEffects.htm
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>What are Effects?</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.</p>
     </body>
 </html>
